@@ -1,7 +1,7 @@
 /*
  *    GeoTools - The Open Source Java GIS Toolkit
  *    http://geotools.org
- * 
+ *
  *    (C) 2002-2008, Open Source Geospatial Foundation (OSGeo)
  *
  *    This library is free software; you can redistribute it and/or
@@ -18,167 +18,159 @@ package org.geotools.util;
 
 import java.math.BigDecimal;
 import java.math.BigInteger;
-
 import junit.framework.TestCase;
-
 import org.geotools.factory.Hints;
 
-/**
- * 
- *
- * @source $URL$
- */
+/** @source $URL$ */
 public class NumericConverterFactoryTest extends TestCase {
 
-	NumericConverterFactory factory;
-	
-	protected void setUp() throws Exception {
-		factory = new NumericConverterFactory();
-	}
-	
-	public void testIntegral() throws Exception {
-		//to byte
-		assertEquals( new Byte( (byte)127 ), convert( new Byte( (byte)127 ), Byte.class ) );
-		assertEquals( new Byte( (byte)127 ), convert( new Short( (short)127 ), Byte.class ) );
-		assertEquals( new Byte( (byte)127 ), convert( new Integer( 127 ), Byte.class ) );
-		assertEquals( new Byte( (byte)127 ), convert( new Long( 127 ), Byte.class ) );
-		assertEquals( new Byte( (byte)127 ), convert( BigInteger.valueOf( 127 ), Byte.class ) );
-		
-		//to short
-		assertEquals( new Short( (short)127 ), convert( new Byte( (byte)127 ), Short.class ) );
-		assertEquals( new Short( (short)127 ), convert( new Short( (short)127 ), Short.class ) );
-		assertEquals( new Short( (short)127 ), convert( new Integer( 127 ), Short.class ) );
-		assertEquals( new Short( (short)127 ), convert( new Long( 127 ), Short.class ) );
-		assertEquals( new Short( (short)127 ), convert( BigInteger.valueOf( 127 ), Short.class ) );
-		
-		//to integer
-		assertEquals( new Integer( 127 ), convert( new Byte( (byte)127 ), Integer.class ) );
-		assertEquals( new Integer( 127 ), convert( new Short( (short)127 ), Integer.class ) );
-		assertEquals( new Integer( 127 ), convert( new Integer( 127 ), Integer.class ) );
-		assertEquals( new Integer( 127 ), convert( new Long( 127 ), Integer.class ) );
-		assertEquals( new Integer( 127 ), convert( BigInteger.valueOf( 127 ), Integer.class ) );
-		
-		//to long
-		assertEquals( new Long( 127 ), convert( new Byte( (byte)127 ), Long.class ) );
-		assertEquals( new Long( 127 ), convert( new Short( (short)127 ), Long.class ) );
-		assertEquals( new Long( 127 ), convert( new Integer( 127 ), Long.class ) );
-		assertEquals( new Long( 127 ), convert( new Long( 127 ), Long.class ) );
-		assertEquals( new Long( 127 ), convert( BigInteger.valueOf( 127 ), Long.class ) );
-		
-		//to big integer
-		assertEquals( BigInteger.valueOf( 127 ), convert( new Byte( (byte)127 ), BigInteger.class ) );
-		assertEquals( BigInteger.valueOf( 127 ), convert( new Short( (short)127 ), BigInteger.class ) );
-		assertEquals( BigInteger.valueOf( 127 ), convert( new Integer( 127 ), BigInteger.class ) );
-		assertEquals( BigInteger.valueOf( 127 ), convert( new Long( 127 ), BigInteger.class ) );
-		assertEquals( BigInteger.valueOf( 127 ), convert( BigInteger.valueOf( 127 ), BigInteger.class ) );
-	}
-	
-	public void testFloat() throws Exception {
-		//to float
-		assertEquals( new Float( 127.127 ), convert( new Float( 127.127 ), Float.class ) );
-		assertEquals( new Float( 127.127 ), convert( new Double( 127.127 ), Float.class ) );
-		assertEquals( new Float( 127.127 ), convert( new BigDecimal( 127.127 ), Float.class ) );
-		
-		//to double
-		assertEquals( 
-			new Double( 127.127 ).doubleValue(), 
-			((Double)convert( new Float( 127.127 ), Double.class )).doubleValue(), 1e-10 
-		);
-		assertEquals( new Double( 127.127 ), convert( new Double( 127.127 ), Double.class ) );
-		assertEquals( new Double( 127.127 ), convert( new BigDecimal( 127.127 ), Double.class ) );
-		
-		//to big decimal
-		assertEquals( 
-			new BigDecimal( 127.127 ).doubleValue(), 
-			((BigDecimal) convert( new Float( 127.127 ), BigDecimal.class )).doubleValue(), 1e-10
-		);
-		assertEquals( new BigDecimal( "127.127" ), convert( new Double( 127.127 ), BigDecimal.class ) );
-		assertEquals( new BigDecimal( 127.127 ), convert( new BigDecimal( 127.127 ), BigDecimal.class ) );
-	}
-	
-	public void testIntegralToFloat() throws Exception {
-		assertEquals( new Float( 127.0 ), convert( new Byte( (byte)127 ), Float.class ) );
-		assertEquals( new Float( 127.0 ), convert( new Short( (short)127 ), Float.class ) );
-		assertEquals( new Float( 127.0 ), convert( new Integer( 127 ), Float.class ) );
-		assertEquals( new Float( 127.0 ), convert( new Long( 127 ), Float.class ) );
-		assertEquals( new Float( 127.0 ), convert( BigInteger.valueOf( 127 ), Float.class ) );
-		
-		assertEquals( new Double( 127.0 ), convert( new Byte( (byte)127 ), Double.class ) );
-		assertEquals( new Double( 127.0 ), convert( new Short( (short)127 ), Double.class ) );
-		assertEquals( new Double( 127.0 ), convert( new Integer( 127 ), Double.class ) );
-		assertEquals( new Double( 127.0 ), convert( new Long( 127 ), Double.class ) );
-		assertEquals( new Double( 127.0 ), convert( BigInteger.valueOf( 127 ), Double.class ) );
-		
-		assertEquals( new BigDecimal( 127.0 ), convert( new Byte( (byte)127 ), BigDecimal.class ) );
-		assertEquals( new BigDecimal( 127.0 ), convert( new Short( (short)127 ), BigDecimal.class ) );
-		assertEquals( new BigDecimal( 127.0 ), convert( new Integer( 127 ), BigDecimal.class ) );
-		assertEquals( new BigDecimal( 127.0 ), convert( new Long( 127 ), BigDecimal.class ) );
-		assertEquals( new BigDecimal( 127.0 ), convert( BigInteger.valueOf( 127 ), BigDecimal.class ) );
-	}
-	
-	public void testFloatToIntegral() throws Exception {
-		//to byte
-		assertEquals( new Byte( (byte)127 ), convert( new Float( 127.127 ), Byte.class ) );
-		assertEquals( new Byte( (byte)127 ), convert( new Double( 127.127 ), Byte.class ) );
-		assertEquals( new Byte( (byte)127 ), convert( new BigDecimal( 127.127 ), Byte.class ) );
-		
-		//to short
-		assertEquals( new Short( (short)127 ), convert( new Float( 127.127 ), Short.class ) );
-		assertEquals( new Short( (short)127 ), convert( new Double( 127.127 ), Short.class ) );
-		assertEquals( new Short( (short)127 ), convert( new BigDecimal( 127.127 ), Short.class ) );
-		
-		//to integer
-		assertEquals( new Integer( 127 ), convert( new Float( 127.127 ), Integer.class ) );
-		assertEquals( new Integer( 127 ), convert( new Double( 127.127 ), Integer.class ) );
-		assertEquals( new Integer( 127 ), convert( new BigDecimal( 127.127 ), Integer.class ) );
-		
-		//to long
-		assertEquals( new Long( 127 ), convert( new Float( 127.127 ), Long.class ) );
-		assertEquals( new Long( 127 ), convert( new Double( 127.127 ), Long.class ) );
-		assertEquals( new Long( 127 ), convert( new BigDecimal( 127.127 ), Long.class ) );
-		
-		//to big integer
-		assertEquals( BigInteger.valueOf( 127 ), convert( new Float( 127.127 ), BigInteger.class ) );
-		assertEquals( BigInteger.valueOf( 127 ), convert( new Double( 127.127 ), BigInteger.class ) );
-		assertEquals( BigInteger.valueOf( 127 ), convert( new BigDecimal( 127.127 ), BigInteger.class ) );
-		
-	}
+    NumericConverterFactory factory;
 
-	public void testStringToInteger() throws Exception {
-	    assertEquals( new Integer(127), convert( "127", Integer.class ) );
-	    assertEquals( new Integer(127), convert( " 127 ", Integer.class ) );
-	    assertEquals( new Integer(3), convert( " 3.0 ", Integer.class ) );
-	    assertEquals( new Integer(-3), convert( "-3.0 ", Integer.class ) );
-	    assertEquals( new Integer(3000), convert( "3000.0 ", Integer.class ) );
-	    assertEquals( new Integer(3000), convert( "3000,0 ", Integer.class ) );	    
-	}
-	public void testStringToDouble() throws Exception {
-	    assertEquals( new Double(4.4), convert( "4.4", Double.class ) );	    
-        assertEquals( new Double(127), convert( "127", Double.class ) );
-        assertEquals( new Double(127), convert( " 127 ", Double.class ) );
-        assertEquals( new Double(3), convert( " 3.0 ", Double.class ) );
-        assertEquals( new Double(-3), convert( "-3.0 ", Double.class ) );
-        assertEquals( new Double(3000), convert( "3000.0 ", Double.class ) );
+    protected void setUp() throws Exception {
+        factory = new NumericConverterFactory();
     }
-	
-	public void testStringToNumber() throws Exception {
-	    assertEquals( new Double(4.4), convert( "4.4", Number.class ));
-	}
-	
-	Object convert( Object source, Class target ) throws Exception {
-		return factory.createConverter( source.getClass(), target, null ).convert( source, target );
-	}
-	
-	public static void testIntegralHandling(){
-	    assertEquals( "3", NumericConverterFactory.toIntegral("3"));
-	    assertEquals( "3", NumericConverterFactory.toIntegral("3.0"));
-	    assertEquals( "-3", NumericConverterFactory.toIntegral("-3"));
-	    assertEquals( "-3", NumericConverterFactory.toIntegral("-3.0"));
-	    assertEquals( "3000", NumericConverterFactory.toIntegral("3000.0"));
-	    assertEquals( "3000", NumericConverterFactory.toIntegral("3000,0"));
-	}
-	
 
+    public void testIntegral() throws Exception {
+        // to byte
+        assertEquals(new Byte((byte) 127), convert(new Byte((byte) 127), Byte.class));
+        assertEquals(new Byte((byte) 127), convert(new Short((short) 127), Byte.class));
+        assertEquals(new Byte((byte) 127), convert(new Integer(127), Byte.class));
+        assertEquals(new Byte((byte) 127), convert(new Long(127), Byte.class));
+        assertEquals(new Byte((byte) 127), convert(BigInteger.valueOf(127), Byte.class));
+
+        // to short
+        assertEquals(new Short((short) 127), convert(new Byte((byte) 127), Short.class));
+        assertEquals(new Short((short) 127), convert(new Short((short) 127), Short.class));
+        assertEquals(new Short((short) 127), convert(new Integer(127), Short.class));
+        assertEquals(new Short((short) 127), convert(new Long(127), Short.class));
+        assertEquals(new Short((short) 127), convert(BigInteger.valueOf(127), Short.class));
+
+        // to integer
+        assertEquals(new Integer(127), convert(new Byte((byte) 127), Integer.class));
+        assertEquals(new Integer(127), convert(new Short((short) 127), Integer.class));
+        assertEquals(new Integer(127), convert(new Integer(127), Integer.class));
+        assertEquals(new Integer(127), convert(new Long(127), Integer.class));
+        assertEquals(new Integer(127), convert(BigInteger.valueOf(127), Integer.class));
+
+        // to long
+        assertEquals(new Long(127), convert(new Byte((byte) 127), Long.class));
+        assertEquals(new Long(127), convert(new Short((short) 127), Long.class));
+        assertEquals(new Long(127), convert(new Integer(127), Long.class));
+        assertEquals(new Long(127), convert(new Long(127), Long.class));
+        assertEquals(new Long(127), convert(BigInteger.valueOf(127), Long.class));
+
+        // to big integer
+        assertEquals(BigInteger.valueOf(127), convert(new Byte((byte) 127), BigInteger.class));
+        assertEquals(BigInteger.valueOf(127), convert(new Short((short) 127), BigInteger.class));
+        assertEquals(BigInteger.valueOf(127), convert(new Integer(127), BigInteger.class));
+        assertEquals(BigInteger.valueOf(127), convert(new Long(127), BigInteger.class));
+        assertEquals(BigInteger.valueOf(127), convert(BigInteger.valueOf(127), BigInteger.class));
+    }
+
+    public void testFloat() throws Exception {
+        // to float
+        assertEquals(new Float(127.127), convert(new Float(127.127), Float.class));
+        assertEquals(new Float(127.127), convert(new Double(127.127), Float.class));
+        assertEquals(new Float(127.127), convert(new BigDecimal(127.127), Float.class));
+
+        // to double
+        assertEquals(
+                new Double(127.127).doubleValue(),
+                ((Double) convert(new Float(127.127), Double.class)).doubleValue(),
+                1e-10);
+        assertEquals(new Double(127.127), convert(new Double(127.127), Double.class));
+        assertEquals(new Double(127.127), convert(new BigDecimal(127.127), Double.class));
+
+        // to big decimal
+        assertEquals(
+                new BigDecimal(127.127).doubleValue(),
+                ((BigDecimal) convert(new Float(127.127), BigDecimal.class)).doubleValue(),
+                1e-10);
+        assertEquals(new BigDecimal("127.127"), convert(new Double(127.127), BigDecimal.class));
+        assertEquals(new BigDecimal(127.127), convert(new BigDecimal(127.127), BigDecimal.class));
+    }
+
+    public void testIntegralToFloat() throws Exception {
+        assertEquals(new Float(127.0), convert(new Byte((byte) 127), Float.class));
+        assertEquals(new Float(127.0), convert(new Short((short) 127), Float.class));
+        assertEquals(new Float(127.0), convert(new Integer(127), Float.class));
+        assertEquals(new Float(127.0), convert(new Long(127), Float.class));
+        assertEquals(new Float(127.0), convert(BigInteger.valueOf(127), Float.class));
+
+        assertEquals(new Double(127.0), convert(new Byte((byte) 127), Double.class));
+        assertEquals(new Double(127.0), convert(new Short((short) 127), Double.class));
+        assertEquals(new Double(127.0), convert(new Integer(127), Double.class));
+        assertEquals(new Double(127.0), convert(new Long(127), Double.class));
+        assertEquals(new Double(127.0), convert(BigInteger.valueOf(127), Double.class));
+
+        assertEquals(new BigDecimal(127.0), convert(new Byte((byte) 127), BigDecimal.class));
+        assertEquals(new BigDecimal(127.0), convert(new Short((short) 127), BigDecimal.class));
+        assertEquals(new BigDecimal(127.0), convert(new Integer(127), BigDecimal.class));
+        assertEquals(new BigDecimal(127.0), convert(new Long(127), BigDecimal.class));
+        assertEquals(new BigDecimal(127.0), convert(BigInteger.valueOf(127), BigDecimal.class));
+    }
+
+    public void testFloatToIntegral() throws Exception {
+        // to byte
+        assertEquals(new Byte((byte) 127), convert(new Float(127.127), Byte.class));
+        assertEquals(new Byte((byte) 127), convert(new Double(127.127), Byte.class));
+        assertEquals(new Byte((byte) 127), convert(new BigDecimal(127.127), Byte.class));
+
+        // to short
+        assertEquals(new Short((short) 127), convert(new Float(127.127), Short.class));
+        assertEquals(new Short((short) 127), convert(new Double(127.127), Short.class));
+        assertEquals(new Short((short) 127), convert(new BigDecimal(127.127), Short.class));
+
+        // to integer
+        assertEquals(new Integer(127), convert(new Float(127.127), Integer.class));
+        assertEquals(new Integer(127), convert(new Double(127.127), Integer.class));
+        assertEquals(new Integer(127), convert(new BigDecimal(127.127), Integer.class));
+
+        // to long
+        assertEquals(new Long(127), convert(new Float(127.127), Long.class));
+        assertEquals(new Long(127), convert(new Double(127.127), Long.class));
+        assertEquals(new Long(127), convert(new BigDecimal(127.127), Long.class));
+
+        // to big integer
+        assertEquals(BigInteger.valueOf(127), convert(new Float(127.127), BigInteger.class));
+        assertEquals(BigInteger.valueOf(127), convert(new Double(127.127), BigInteger.class));
+        assertEquals(BigInteger.valueOf(127), convert(new BigDecimal(127.127), BigInteger.class));
+    }
+
+    public void testStringToInteger() throws Exception {
+        assertEquals(new Integer(127), convert("127", Integer.class));
+        assertEquals(new Integer(127), convert(" 127 ", Integer.class));
+        assertEquals(new Integer(3), convert(" 3.0 ", Integer.class));
+        assertEquals(new Integer(-3), convert("-3.0 ", Integer.class));
+        assertEquals(new Integer(3000), convert("3000.0 ", Integer.class));
+        assertEquals(new Integer(3000), convert("3000,0 ", Integer.class));
+    }
+
+    public void testStringToDouble() throws Exception {
+        assertEquals(new Double(4.4), convert("4.4", Double.class));
+        assertEquals(new Double(127), convert("127", Double.class));
+        assertEquals(new Double(127), convert(" 127 ", Double.class));
+        assertEquals(new Double(3), convert(" 3.0 ", Double.class));
+        assertEquals(new Double(-3), convert("-3.0 ", Double.class));
+        assertEquals(new Double(3000), convert("3000.0 ", Double.class));
+    }
+
+    public void testStringToNumber() throws Exception {
+        assertEquals(new Double(4.4), convert("4.4", Number.class));
+    }
+
+    Object convert(Object source, Class target) throws Exception {
+        return factory.createConverter(source.getClass(), target, null).convert(source, target);
+    }
+
+    public static void testIntegralHandling() {
+        assertEquals("3", NumericConverterFactory.toIntegral("3"));
+        assertEquals("3", NumericConverterFactory.toIntegral("3.0"));
+        assertEquals("-3", NumericConverterFactory.toIntegral("-3"));
+        assertEquals("-3", NumericConverterFactory.toIntegral("-3.0"));
+        assertEquals("3000", NumericConverterFactory.toIntegral("3000.0"));
+        assertEquals("3000", NumericConverterFactory.toIntegral("3000,0"));
+    }
 
     Object convertSafe(Object source, Class<?> target) throws Exception {
         Hints hints = new Hints();
@@ -229,13 +221,14 @@ public class NumericConverterFactoryTest extends TestCase {
 
         // big integer
         assertEquals(BigInteger.valueOf(127), convertSafe(new Byte((byte) 127), BigInteger.class));
-        assertEquals(BigInteger.valueOf(1111), convertSafe(new Short((short) 1111),
-                BigInteger.class));
+        assertEquals(
+                BigInteger.valueOf(1111), convertSafe(new Short((short) 1111), BigInteger.class));
         assertEquals(BigInteger.valueOf(12345), convertSafe(new Integer(12345), BigInteger.class));
-        assertEquals(BigInteger.valueOf(1234567), convertSafe(new Integer(1234567),
-                BigInteger.class));
-        assertEquals(BigInteger.valueOf(12345678), convertSafe(BigInteger.valueOf(12345678),
-                BigInteger.class));
+        assertEquals(
+                BigInteger.valueOf(1234567), convertSafe(new Integer(1234567), BigInteger.class));
+        assertEquals(
+                BigInteger.valueOf(12345678),
+                convertSafe(BigInteger.valueOf(12345678), BigInteger.class));
         assertNull(convertSafe(new Double(128.1), Long.class));
         assertNull(convertSafe(new BigDecimal(128.1), Long.class));
         assertNull(convertSafe(new Float(128.1), Long.class));
@@ -245,7 +238,8 @@ public class NumericConverterFactoryTest extends TestCase {
         assertEquals(new Double(1111), convertSafe(new Short((short) 1111), Double.class));
         assertEquals(new Double(12345), convertSafe(new Integer(12345), Double.class));
         assertEquals(new Double(1234567), convertSafe(new Integer(1234567), Double.class));
-        //assertEquals(new Double(12345678), convertSafe(BigInteger.valueOf(12345678), Double.class));
+        // assertEquals(new Double(12345678), convertSafe(BigInteger.valueOf(12345678),
+        // Double.class));
         assertEquals(new Double(12.123456), convertSafe(new Double(12.123456), Double.class));
         assertNull(convertSafe(new BigDecimal(128.1), Long.class));
         assertEquals(new Double(12.12), convertSafe(new Float(12.12), Double.class));
@@ -265,15 +259,17 @@ public class NumericConverterFactoryTest extends TestCase {
         assertEquals(new BigDecimal(1111), convertSafe(new Short((short) 1111), BigDecimal.class));
         assertEquals(new BigDecimal(12345), convertSafe(new Integer(12345), BigDecimal.class));
         assertEquals(new BigDecimal(1234567), convertSafe(new Integer(1234567), BigDecimal.class));
-        assertEquals(new BigDecimal(12345678), convertSafe(BigInteger.valueOf(12345678),
-                BigDecimal.class));
-        assertEquals(new BigDecimal((new Double(12.123456)).toString()), convertSafe(new Double(
-                12.123456), BigDecimal.class));
+        assertEquals(
+                new BigDecimal(12345678),
+                convertSafe(BigInteger.valueOf(12345678), BigDecimal.class));
+        assertEquals(
+                new BigDecimal((new Double(12.123456)).toString()),
+                convertSafe(new Double(12.123456), BigDecimal.class));
         assertEquals(new BigDecimal(128.1), convertSafe(new BigDecimal(128.1), BigDecimal.class));
-        assertEquals(new BigDecimal((new Float(12.12)).toString()), convertSafe(new Float(12.12),
-                BigDecimal.class));
-        
-        
+        assertEquals(
+                new BigDecimal((new Float(12.12)).toString()),
+                convertSafe(new Float(12.12), BigDecimal.class));
+
         // test strings
         assertEquals(new BigDecimal(127), convertSafe("127", BigDecimal.class));
         assertNull(convertSafe("127f", BigDecimal.class));
@@ -291,14 +287,14 @@ public class NumericConverterFactoryTest extends TestCase {
         assertNull(convertSafe("123.6", Short.class));
         assertEquals(new Byte("1"), convertSafe("1", Byte.class));
         assertNull(convertSafe("123.6", Byte.class));
-    }      
-    
+    }
+
     public void testPrimitiveTypes() throws Exception {
         assertEquals(1, convert(new Integer(1), int.class));
         assertEquals(new Integer(1), convert(new Integer(1), int.class));
         assertEquals(1, convert(1, Integer.class));
         assertEquals(new Integer(1), convert(1, Integer.class));
-        
+
         assertEquals(1, convert("1", int.class));
         assertEquals(new Integer(1), convert("1", int.class));
         assertEquals(1, convert("1", Integer.class));
